Add stricter validation for user's email

--- a/translations/validators.en.json
+++ b/translations/validators.en.json
@@ -3,5 +3,7 @@
     "username.min_length": "Your username should be at least {{ limit }} characters",
     "username.max_length": "Your username should be at most {{ limit }} characters",
     "username.forbidden_words": "The username contains forbidden word",
-    "username.front_length_validation": "Username must be between 8 and 64 characters"
+    "username.front_length_validation": "Username must be between 8 and 64 characters",
+    "email.not_blank": "Please enter an email address",
+    "email.invalid": "Please enter a valid email address"
 }
