--- a/translations/front.en.json
+++ b/translations/front.en.json
@@ -8,7 +8,22 @@
         "admin_panel": "Admin panel"
     },
     "register": {
+        "title": "Register",
+        "subtitle": "Join F1 Simulator and start your journey!",
+        "username": "Username",
+        "username_placeholder": "Enter your username",
+        "username_info": "Username must be at least 8 characters long",
+        "email": "Email address",
+        "email_placeholder": "Enter your email address",
+        "email_info": "We'll send a verification email to this address",
+        "password": "Password",
+        "password_placeholder": "Enter your password",
         "password_info": "Password must be at least 12 characters, contain an uppercase letter and a special character",
-        "repeat_password_info": "Enter the same password again"
+        "repeat_password": "Repeat password",
+        "repeat_password_placeholder": "Repeat your password",
+        "repeat_password_info": "Enter the same password again",
+        "submit": "Create account",
+        "already_have_account": "Already have an account?",
+        "login": "Log in"
     }
 }
