Add remember me to login form
(cherry picked from commit 9f5d93fc841747454f19455fcc68afc2b76af65e)

--- a/translations/front.en.json
+++ b/translations/front.en.json
@@ -17,6 +17,7 @@
         "username_placeholder": "Enter your username",
         "password": "Password",
         "password_placeholder": "Enter your password",
+        "remember_me": "Remember me",
         "submit": "Log in",
         "no_account": "Don't have an account?",
         "register": "Register"
