Add information about link expiration time

--- a/translations/security.pl.json
+++ b/translations/security.pl.json
@@ -1,5 +1,5 @@
 {
     "Invalid credentials.": "Podany login i hasło są nieprawidłowe.",
-    "not_existent_confirmation_link": "Link potwierdzający jest nieprawidłowy",
-    "account_confirmed": "Konto zostało potwierdzone, możesz się teraz zalogować"
+    "not_existent_confirmation_link": "Link potwierdzający jest nieprawidłowy lub wygasł.",
+    "account_confirmed": "Konto zostało potwierdzone, możesz się teraz zalogować."
 }
