--- a/translations/security.pl.json
+++ b/translations/security.pl.json
@@ -1,5 +1,6 @@
 {
     "Invalid credentials.": "Podany login i hasło są nieprawidłowe.",
     "not_existent_confirmation_link": "Link potwierdzający jest nieprawidłowy lub wygasł.",
-    "account_confirmed": "Konto zostało potwierdzone, możesz się teraz zalogować."
+    "account_confirmed": "Konto zostało potwierdzone, możesz się teraz zalogować.",
+    "account_not_confirmed_checker": "Musisz najpierw potwierdzić swoje konto przez link weryfikacyjny w mailu."
 }
