--- a/translations/front.en.json
+++ b/translations/front.en.json
@@ -46,5 +46,8 @@
             "and": "and",
             "privacy_policy": "privacy policy"
         }
+    },
+    "resend_confirmation_email": {
+        "title": "Resend confirmation email"
     }
 }
