--- a/translations/front.pl.json
+++ b/translations/front.pl.json
@@ -48,6 +48,10 @@
         }
     },
     "resend_confirmation_email": {
-        "title": "Wyślij ponownie email weryfikacyjny"
+        "title": "Wyślij ponownie email weryfikacyjny",
+        "your_account_is_unverified": "Twoje konto jest nie potwierdzone",
+        "check_your_email_inbox": "Sprawdź swoją skrzynkę pocztową w celu potwierdzenia konta",
+        "description": "Jeśli nie możesz znaleźć maila bądź link weryfikacyjny wygasł, kliknij w link poniżej, żeby wysłać nowy email.",
+        "resend_button": "Wyślij link weryfikacyjny"
     }
 }
